--- a/views/login.html
+++ b/views/login.html
@@ -17,25 +17,29 @@
                     <form>
                         <div class="form-group">
                           <label>User name</label>
-                          <input type="email" class="form-control" id="InputUser" placeholder="Enter User">
+                          <input  type="text" class="form-control" id="input-user" placeholder="Enter User">
                           <small class="form-text text-muted">We'll never share your user with anyone else.</small>
                         </div>
                         <div class="form-group">
                           <label>Password</label>
-                          <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+                          <input type="text" class="form-control" id="input-password" placeholder="Password">
                         </div>
-                        <button class="btn btn-primary btn-block bg-submit mt-5" type="button">Log in</button>
+                        <button class="btn btn-primary btn-block bg-submit mt-5" type="button" onclick=authorizer()>Log in</button>
                     </form>
                 </div>                
             </div>
             <div class="col-md quot">
                 <div class="letter">
                     <h2>Login with user and password</h2>
-                    <h5 class="mt-4">make sure that your user and password match with data in our system. so that make you can login to see all your data in our system.<br> hope you enjoy it!! </h5>
+                    <h5 class="mt-4">make sure that your user and password match with data in our system. so that make you can login to see all name in our system.<br> hope you enjoy it!! </h5>
                     <hr>
                     <span>Irwan Hadi</span>
                 </div>
             </div>
     </div>
+<script src="/js/login.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
