--- a/css/login.css
+++ b/css/login.css
@@ -11,13 +11,25 @@ body {
     color: white;
 }
 
-.letter {
-    margin: 80px;
+.letter h2 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.img {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .form {
     display: flex;
     height: 100vh;
+    width: 100%;
     justify-content: center;
     align-items: center;
 }
