--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,9 @@
         <div class="row">
             <div class="col-md form">
                 <div class="letter">
+                    <div class="img">
+                        <img src="https://png.pngtree.com/png-vector/20190303/ourmid/pngtree-modern-abstract-3d-logo-png-image_771012.jpg" alt="">
+                     </div> 
                     <h2 class="mb-5">We are the big Data</h2>
                     <form>
                         <div class="form-group">
