--- a/views/login.html
+++ b/views/login.html
@@ -13,6 +13,9 @@
         <div class="row">
             <div class="col-md form">
                 <div class="letter">
+                    <div class="img">
+                        <img src="https://png.pngtree.com/png-vector/20190303/ourmid/pngtree-modern-abstract-3d-logo-png-image_771012.jpg" alt="">
+                     </div> 
                     <h2 class="mb-5">We are the big Data</h2>
                     <form>
                         <div class="form-group">
@@ -29,7 +32,7 @@
                 </div>                
             </div>
             <div class="col-md quot">
-                <div class="letter">
+                <div class="letter2">
                     <h2>Login with user and password</h2>
                     <h5 class="mt-4">make sure that your user and password match with data in our system. so that make you can login to see all name in our system.<br> hope you enjoy it!! </h5>
                     <hr>
