--- a/css/login.css
+++ b/css/login.css
@@ -11,6 +11,10 @@ body {
     color: white;
 }
 
+.letter2 {
+    margin: 60px;
+}
+
 .letter h2 {
     width: 100%;
     height: 100%;
@@ -29,7 +33,6 @@ body {
 .form {
     display: flex;
     height: 100vh;
-    width: 100%;
     justify-content: center;
     align-items: center;
 }
