--- a/views/login.html
+++ b/views/login.html
@@ -32,7 +32,7 @@
                 </div>                
             </div>
             <div class="col-md quot">
-                <div class="letter">
+                <div class="letter2">
                     <h2>Login with user and password</h2>
                     <h5 class="mt-4">make sure that your user and password match with data in our system. so that make you can login to see all name in our system.<br> hope you enjoy it!! </h5>
                     <hr>
