--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
                         </div>
                         <div class="form-group">
                           <label>Password</label>
-                          <input type="text" class="form-control" id="input-password" placeholder="Password">
+                          <input type="password" class="form-control" id="input-password" placeholder="Password">
                         </div>
                         <button class="btn btn-primary btn-block bg-submit mt-5" type="button" onclick=authorizer()>Log in</button>
                     </form>
